--- a/Pipfile
+++ b/Pipfile
@@ -6,11 +6,11 @@ name = "pypi"
 [packages]
 click = "==8.1.7"
 google-api-python-client = "==2.142.0"
-
+google-auth-oauthlib = "==1.2.1"
+pytz = "==2024.1"
 
 [dev-packages]
 black = "==22.3.0"
-isort = "==5.10.1"
 
 [requires]
 python_full_version  = "3.12.5"
