--- a/Pipfile
+++ b/Pipfile
@@ -4,6 +4,7 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
+click = "==8.1.7"
 google-api-python-client = "==2.142.0"
 google-auth-oauthlib = "==1.2.1"
 
